--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,1 +1,21 @@
 @import "tailwindcss";
+/* @import url('https://fonts.googleapis.com/css2?family=Product_Sans:wght@400;500;700&display=swap');
+
+body {
+  font-family: 'Product_Sans', sans-serif;
+} */
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+/* @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
+} */
+
+
