--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
-/* @import url('https://fonts.googleapis.com/css2?family=Product_Sans:wght@400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 body {
-  font-family: 'Product_Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
 } */
 
 /* * {
